# sec-10k-agent

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml  test_retrieval.py
.github/workflows/: ci.yml
data/eval/: SCHEMA.md
docs/: architecture.md  design-decisions.md
notebooks/: test_retrieval.py
scripts/: postgres-init.sql
src/sec_10k_agent/: __init__.py  cli.py  config.py  scope.py
src/sec_10k_agent/agent/: __init__.py
src/sec_10k_agent/api/: __init__.py
src/sec_10k_agent/eval/: __init__.py
src/sec_10k_agent/ingestion/: __init__.py  chunker.py  db_loader.py  edgar_client.py  embed_chunks.py  load_vectors.py  models.py  parsed_filing.py  parser.py  rate_limiter.py  tokenizer.py  xbrl.py
src/sec_10k_agent/observability/: __init__.py
src/sec_10k_agent/retrieval/: __init__.py
tests/: test_chunker.py  test_edgar_client.py  test_parser.py  test_smoke.py  test_xbrl.py
